# Intel-Unnati-Industrial-Trainning

./: .gitignore  Gazebo Setup  README.md
Documentation/: text.md
Gazebo Setup/: camera position.xlsx
Navigation Simulation Setup/: Navigation Simulation Setup Instructions.md
SLAM Simulation Setup/: SLAM Simulation Setup Instructions.md
Scripts/: Final_script.py  Latency_measurement.py  README FIRST!!!  map.pgm
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/env_map/lib/env_map/: object_detection_node
ros2_ws/install/env_map/share/env_map/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/my_camera_package/lib/my_camera_package/: image2  occupancy_grid_map_node
ros2_ws/install/my_camera_package/share/my_camera_package/: package.sh
ros2_ws/install/my_robot_package/share/my_robot_package/: package.dsv  package.ps1  package.sh  package.xml
ros2_ws/src/env_map/: package.xml  setup.cfg  setup.py
ros2_ws/src/env_map/env_map/: env_map.py
ros2_ws/src/env_map/env_map/install/: local_setup.sh  setup.sh
ros2_ws/src/env_map/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/env_map/install/env_map/share/env_map/: package.sh
ros2_ws/src/my_camera_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/my_camera_package/my_camera_package/: image2.py  transform.py
